methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:49: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime11.PictureMono2'
override def run() {
             ^