methods.picture.PictureMono2.scala.code
def faireMotif(){
   for (i<-1 to 7){ 
     avance()
     baisseBrosse()
     gauche()
     leveBrosse()
     avance()
     droite()
     avance()
     baisseBrosse()
     leveBrosse()
     droite()
     avance()
     gauche()
     avance()
     baisseBrosse()
     leveBrosse()
     avance()
     gauche()
  }
}

override def run() {
  
  for (l<-1 to 9){
   faireMotif()
   }
 
}

def faireV(){
  baisseBrosse()
  gauche()
  leveBrosse()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  droite()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
 
}

override def run() {
 for (i<-1 to 4 ){   
  avance(2)
  faireV()
  avance(2)
   gauche()
  }
}